<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/CustomCardViewStyle"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_peekHeight="200dp"
    android:layout_gravity="bottom"
    app:layout_behavior="@string/bottom_sheet_behavior">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:weightSum="3">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/description"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp">

        </com.google.android.material.textview.MaterialTextView>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:src="@drawable/ic_paperclip">

        </ImageView>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attachment"
        android:layout_marginLeft="40dp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.example.customviewassignment.views.component.RoundedImageView
            android:id="@+id/addSign"
            layout="@layout/view_pod_plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/files_and_folders"
            android:padding="10dp"
            app:cornerRadius="30dp">

        </com.example.customviewassignment.views.component.RoundedImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:weightSum="2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reference_1"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="140 KB"
                    >

                </TextView>

                    <com.example.customviewassignment.views.component.RoundedImageView
                        android:id="@+id/cancelSign"
                        layout="@layout/view_pod_plus"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_close_black_24dp"
                        android:padding="10dp"
                        app:cornerRadius="25dp">

                    </com.example.customviewassignment.views.component.RoundedImageView>

            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:max="100"
                android:progress="85"
                />

        </LinearLayout>



    </LinearLayout>
    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/creat_task">

    </Button>

</LinearLayout>
</com.google.android.material.card.MaterialCardView>